compiler/tests/fa/errors/repeat_not_number.salam
// انتظار: خطا۰۶۳
// زبان: فارسی
تابع اصلی:
    تکرار "سه":
        چاپ "x"
    پایان
پایان
